--- a/tetris/pom.xml
+++ b/tetris/pom.xml
@@ -8,9 +8,19 @@
     <artifactId>tetris</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    
+    <dependencies>
+        <dependency> <!-- Jackson 3.x -->
+            <groupId>tools.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>3.0.0-rc4</version>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+
 
 </project>
