--- a/tetris/pom.xml
+++ b/tetris/pom.xml
@@ -10,11 +10,24 @@
 
     
     <dependencies>
-        <dependency> <!-- Jackson 3.x -->
-            <groupId>tools.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>3.0.0-rc4</version>
-        </dependency>
+<dependency>
+  <groupId>com.fasterxml.jackson.core</groupId>
+  <artifactId>jackson-core</artifactId>
+  <version>2.9.6</version>
+</dependency>
+
+<dependency>
+  <groupId>com.fasterxml.jackson.core</groupId>
+  <artifactId>jackson-annotations</artifactId>
+  <version>2.9.6</version>
+</dependency>
+
+<dependency>
+  <groupId>com.fasterxml.jackson.core</groupId>
+  <artifactId>jackson-databind</artifactId>
+  <version>2.9.6</version>
+</dependency>
+
     </dependencies>
 
     <properties>
